# Nexus

./: README.md
compiler/: CMakeLists.txt  main.cpp
compiler/backend/: backend_test.cpp  codegen.cpp  codegen.h
compiler/frontend/: CMakeLists.txt  ast.cpp  ast.h  lexer.cpp  lexer.h  lexer_test.cpp  parser.cpp  parser.h  parser_test.cpp  semantic_analyzer.cpp  semantic_analyzer.h  semantic_test.cpp  token.cpp  token.h
compiler/middleend/: CMakeLists.txt  codegen.cpp  codegen.h  ir.cpp  ir.h  middleend_test.cpp  optimizer.cpp  optimizer.h
